Add icons to sidebar

--- a/index.html
+++ b/index.html
@@ -5,18 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <div class="sidebar-container">
-        <div>
+        <div class="dashboard">
+          <img
+            class="sidebar-icon"
+            id="dash"
+            src="Images/dashboard.svg"
+            alt="dashboard"
+          />
           <div>Dashboard</div>
-          <div>Home</div>
-          <div>Profile</div>
-          <div>Messages</div>
-          <div>History</div>
-          <div>Tasks</div>
-          <div>Communities</div>
+        </div>
+        <div class="sidebar-top">
+          <div class="sidebar-containers">
+            <img class="sidebar-icon" src="Images/home.svg" alt="home" />
+            <div>Home</div>
+          </div>
+          <div class="sidebar-containers">
+            <img class="sidebar-icon" src="Images/profile.svg" alt="profile" />
+            <div>Profile</div>
+          </div>
+          <div class="sidebar-containers">
+            <img
+              class="sidebar-icon"
+              src="Images/messages.svg"
+              alt="messages"
+            />
+            <div>Messages</div>
+          </div>
+          <div class="sidebar-containers">
+            <img class="sidebar-icon" src="Images/history.svg" alt="history" />
+            <div>History</div>
+          </div>
+          <div class="sidebar-containers">
+            <img class="sidebar-icon" src="Images/tasks.svg" alt="tasks" />
+            <div>Tasks</div>
+          </div>
+          <div class="sidebar-containers">
+            <img
+              class="sidebar-icon"
+              src="Images/communities.svg"
+              alt="communities"
+            />
+            <div>Communities</div>
+          </div>
+        </div>
+        <div class="sidebar-bottom">
+          <div class="settings-container">
+            <img
+              class="sidebar-icon"
+              src="Images/settings.svg"
+              alt="settings"
+            />
+            <div>Settings</div>
+          </div>
+          <div class="support-container">
+            <img class="sidebar-icon" src="Images/support.svg" alt="support" />
+            <div>Support</div>
+          </div>
+          <div class="sidebar-containers">
+            <img class="sidebar-icon" src="Images/privacy.svg" alt="privacy" />
+            <div>Privacy</div>
+          </div>
         </div>
       </div>
       <div class="header"></div>
