Adjust sidebar logo sizing, add searchbar and profile buttons and elements.

--- a/index.html
+++ b/index.html
@@ -77,8 +77,43 @@
           </div>
         </div>
       </div>
-      <div class="header"></div>
-      <div class="main-content"></div>
+
+      <div class="header">
+        <div class="search">
+          <img
+            class="logo"
+            id="profile-logo"
+            src="Images/search.svg"
+            alt="magnifying-glass"
+          />
+          <div class="searchbar"></div>
+        </div>
+        <div class="profile">
+          <img
+            class="logo"
+            id="profile-logo"
+            src="Images/bell.svg"
+            alt="bell"
+          />
+          <img class="pikachu" src="Images/pikachu.png" alt="pikachu" />
+          <div class="bold">Aaron Dang</div>
+        </div>
+
+        <div class="left-profile">
+          <img class="pikachu-big" src="Images/pikachu.png" alt="pikachu" />
+          <div class="profile-text">
+            <div class="small-text">Hi there,</div>
+            <div class="big-text">Aaron Dang (@aaron)</div>
+          </div>
+        </div>
+        <div class="right-profile">
+          <div class="button">New</div>
+          <div class="button">Upload</div>
+          <div class="button">Share</div>
+        </div>
+      </div>
+
+      <strong class="main-content"></strong>
     </div>
   </body>
 </html>
