Create outline for the main article cards

--- a/index.html
+++ b/index.html
@@ -113,7 +113,77 @@
         </div>
       </div>
 
-      <strong class="main-content"></strong>
+      <div class="main-content">
+        <div class="title">Your Projects</div>
+        <div class="cards">
+          <div class="card">
+            <div class="card-text">
+              <div>Super Cool Project</div>
+              <div class="subtext">Dummy text</div>
+            </div>
+            <div class="card-icons">
+              <img class="card-icon" src="Images/star.svg" alt="star" />
+              <img class="card-icon" src="Images/eye.svg" alt="eye" />
+              <img class="card-icon" src="Images/share.svg" alt="share" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <div class="card-title">Super Cool Project</div>
+              <div class="subtext">Dummy text</div>
+            </div>
+            <div class="card-icons">
+              <img class="card-icon" src="Images/star.svg" alt="star" />
+              <img class="card-icon" src="Images/eye.svg" alt="eye" />
+              <img class="card-icon" src="Images/share.svg" alt="share" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <div class="card-title">Super Cool Project</div>
+              <div class="subtext">Dummy text</div>
+            </div>
+            <div class="card-icons">
+              <img class="card-icon" src="Images/star.svg" alt="star" />
+              <img class="card-icon" src="Images/eye.svg" alt="eye" />
+              <img class="card-icon" src="Images/share.svg" alt="share" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <div class="card-title">Super Cool Project</div>
+              <div class="subtext">Dummy text</div>
+            </div>
+            <div class="card-icons">
+              <img class="card-icon" src="Images/star.svg" alt="star" />
+              <img class="card-icon" src="Images/eye.svg" alt="eye" />
+              <img class="card-icon" src="Images/share.svg" alt="share" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <div class="card-title">Super Cool Project</div>
+              <div class="subtext">Dummy text</div>
+            </div>
+            <div class="card-icons">
+              <img class="card-icon" src="Images/star.svg" alt="star" />
+              <img class="card-icon" src="Images/eye.svg" alt="eye" />
+              <img class="card-icon" src="Images/share.svg" alt="share" />
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-text">
+              <div class="card-title">Super Cool Project</div>
+              <div class="subtext">Dummy text</div>
+            </div>
+            <div class="card-icons">
+              <img class="card-icon" src="Images/star.svg" alt="star" />
+              <img class="card-icon" src="Images/eye.svg" alt="eye" />
+              <img class="card-icon" src="Images/share.svg" alt="share" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
