Add the announcements and trending section

--- a/index.html
+++ b/index.html
@@ -183,6 +183,56 @@
             </div>
           </div>
         </div>
+        <div class="announcements">Announcements</div>
+        <div class="top-section">
+          <div class="announce-card">
+            <div class="announce-text">Site Maintenance</div>
+            <div class="subtext">Dummy text</div>
+            <div class="divider"></div>
+            <div class="community-text">Community Share Day</div>
+            <div class="subtext">Dummy Text</div>
+            <div class="divider"></div>
+            <div class="updated-text">Updated Privacy Policy</div>
+            <div class="subtext">Dummy text</div>
+          </div>
+        </div>
+        <div class="bottom-section">
+          <div class="trending">Trending</div>
+          <div class="trending-card">
+            <div class="img-container">
+              <img
+                class="pokemon"
+                src="Images/charmander.png"
+                alt="charmander"
+              />
+              <div class="trending-text">
+                <div class="account">@charmander</div>
+                <div class="account-text">Fire-Type Pokemon</div>
+              </div>
+            </div>
+            <div class="img-container">
+              <img class="pokemon" src="Images/bulbasaur.png" alt="bulbasaur" />
+              <div class="trending-text">
+                <div class="account">@bulbasaur</div>
+                <div class="account-text">Grass-Type Pokemon</div>
+              </div>
+            </div>
+            <div class="img-container">
+              <img class="pokemon" src="Images/mudkip.png" alt="mudkip" />
+              <div class="trending-text">
+                <div class="account">@mudkip</div>
+                <div class="account-text">Water-Type Pokemon</div>
+              </div>
+            </div>
+            <div class="imglast-container">
+              <img class="pokemon" src="Images/pikachu.png" alt="pikachu" />
+              <div class="trending-text">
+                <div class="account">@pikachu</div>
+                <div class="account-text">Electric-Type Pokemon</div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
