Adjust placements of icons, and add padding to header section for aesthetics

--- a/index.html
+++ b/index.html
@@ -118,8 +118,11 @@
         <div class="cards">
           <div class="card">
             <div class="card-text">
-              <div>Super Cool Project</div>
-              <div class="subtext">Dummy text</div>
+              <div class="card-title">Choose a Starter</div>
+              <div class="subtext">
+                Charmander is one of three 'starter' Pokémon that can be
+                selected at the beginning of Pokémon Red and Blue.
+              </div>
             </div>
             <div class="card-icons">
               <img class="card-icon" src="Images/star.svg" alt="star" />
@@ -129,8 +132,11 @@
           </div>
           <div class="card">
             <div class="card-text">
-              <div class="card-title">Super Cool Project</div>
-              <div class="subtext">Dummy text</div>
+              <div class="card-title">Pokemon Center</div>
+              <div class="subtext">
+                The Pokémon Center is a chain of specialty stores selling
+                Pokémon-related merchandise.
+              </div>
             </div>
             <div class="card-icons">
               <img class="card-icon" src="Images/star.svg" alt="star" />
@@ -140,8 +146,11 @@
           </div>
           <div class="card">
             <div class="card-text">
-              <div class="card-title">Super Cool Project</div>
-              <div class="subtext">Dummy text</div>
+              <div class="card-title">Diamond & Pearl</div>
+              <div class="subtext">
+                The Pokemon game Diamond & Pearl feature two legendary Pokemon
+                Dialga and Palkia.
+              </div>
             </div>
             <div class="card-icons">
               <img class="card-icon" src="Images/star.svg" alt="star" />
@@ -151,8 +160,11 @@
           </div>
           <div class="card">
             <div class="card-text">
-              <div class="card-title">Super Cool Project</div>
-              <div class="subtext">Dummy text</div>
+              <div class="card-title">SoulSilver & HeartGold</div>
+              <div class="subtext">
+                The Pokemon game Diamond & Pearl feature two legendary Pokemon
+                Lugia and Ho-Oh.
+              </div>
             </div>
             <div class="card-icons">
               <img class="card-icon" src="Images/star.svg" alt="star" />
@@ -162,8 +174,11 @@
           </div>
           <div class="card">
             <div class="card-text">
-              <div class="card-title">Super Cool Project</div>
-              <div class="subtext">Dummy text</div>
+              <div class="card-title">Pokeball Fact</div>
+              <div class="subtext">
+                Pokeballs are the most abundant ball-type in every pokemon game.
+                They have the lowest catch-rate amongst every ball.
+              </div>
             </div>
             <div class="card-icons">
               <img class="card-icon" src="Images/star.svg" alt="star" />
@@ -173,8 +188,11 @@
           </div>
           <div class="card">
             <div class="card-text">
-              <div class="card-title">Super Cool Project</div>
-              <div class="subtext">Dummy text</div>
+              <div class="card-title">Masterball Fact</div>
+              <div class="subtext">
+                Masterballs are the least abundant ball-type in every pokemon
+                game. They have the highest catch-rate amongst every ball.
+              </div>
             </div>
             <div class="card-icons">
               <img class="card-icon" src="Images/star.svg" alt="star" />
@@ -187,13 +205,16 @@
         <div class="top-section">
           <div class="announce-card">
             <div class="announce-text">Site Maintenance</div>
-            <div class="subtext">Dummy text</div>
+            <div class="subtext">
+              Too many players logging in crashed the server. Currently fixing
+              the system.
+            </div>
             <div class="divider"></div>
             <div class="community-text">Community Share Day</div>
-            <div class="subtext">Dummy Text</div>
+            <div class="subtext">Share your pokemon with the world!</div>
             <div class="divider"></div>
             <div class="updated-text">Updated Privacy Policy</div>
-            <div class="subtext">Dummy text</div>
+            <div class="subtext">Please do not copyright us.</div>
           </div>
         </div>
         <div class="bottom-section">
